added detailed comments

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <!-- Header -->
+  <!--the Header of the page-->
   <header>
     <center>
       <a href="index.html">
@@ -18,7 +18,7 @@
     <p>Handcrafted Charms & Jewelry Inspired by Luck and Joy ✨</p>
   </header>
 
-  <!-- Navigation -->
+  <!-- Navigation, hyperlinks to be able to navigate from one web page to another -->
   <nav>
     <ul>
       <li><a href="index_homepage.html">Home</a></li>
