--- a/index_homepage.html
+++ b/index_homepage.html
@@ -6,7 +6,7 @@
     <title>Dee's Lucky Charms Home Page</title>
 <body>
 
-  <!-- Header with Logo -->
+  <!-- Header with a logo-->
   <header>
     <center>
     <a href="index.html">
@@ -17,7 +17,7 @@
     </center>
   </header>
 
-    <!-- Navigation Bar -->
+    <!-- Navigation Bar, contails hyperlinks that aallow navigation from one web page to another -->
     <nav>
         <ul>
             <li><a href="index_homepage.html">Home</a></li>
