--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
       <li><a href="products.html">Products</a></li>
       <li><a href="contact_us.html">Contact</a></li>
       <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="Reviews.html">Reviews</a> </li>
     </ul>
   </nav>
 
