--- a/index_homepage.html
+++ b/index_homepage.html
@@ -6,6 +6,7 @@
     <title>Dee's Lucky Charms Home Page</title>
 <body>
 
+
   <!-- Header with a logo-->
   <header>
     <center>
@@ -25,9 +26,13 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="contact_us.html">Contact</a></li>
             <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
         </ul>
 
     </nav>
+
+    <!--A brief introduction about the company-->
+    
 
     <!-- Main Content Area -->
     <main>
