Added a brief description for business on the  the home page

--- a/index_homepage.html
+++ b/index_homepage.html
@@ -32,6 +32,9 @@
     </nav>
 
     <!--A brief introduction about the company-->
+    <body>
+      Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewelry that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!
+    </body>
     
 
     <!-- Main Content Area -->
