--- a/index_homepage.html
+++ b/index_homepage.html
@@ -47,6 +47,8 @@
         <img src="_images/homePage.jpg" alt="Charms" width="1100" height="750">
         </center>
     </main>
-        
+  
+
+  <!-- Footer Section -->
 
                 
