did the footersection of the home page

--- a/index_homepage.html
+++ b/index_homepage.html
@@ -50,5 +50,13 @@
   
 
   <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 Dee's Lucky Charms. All rights reserved.</p>
+    <p>Contact us: 0658 877 789 </p>
+    <p>Email: <a href="mailto:dee@gmail.com">deesluckycharms@gmail.com</a></p>
+    <p>Location: Sandton, Johannesburg</p>
+  </footer>
+</body>
+</html>
 
                 
