fixed the abouth page's spelling errors

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <main>
     <section>
       <h2>Our Story</h2>
-      <p>Dee's Lucky Charms started with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. Each charm and piece of jewelry is designed with love, meaning, and a touch of magic.</p>
+      <p>Dee's Lucky Charms started with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. Each charm and piece of jewellery is designed with love, meaning, and a touch of magic.</p>
     </section>
 
     <section>
@@ -50,13 +50,13 @@
 
     <section>
       <h2>Meet the Founder</h2>
-      <p>Dineo Tukakgomo also known as Dee, the creative mind behind Dee's Lucky Charms, is passionate about art, design, and spreading joy. With a background in jewelry making and a love for all things whimsical, Dee crafts each piece with care and attention to detail.</p>
+      <p>Dineo Tukakgomo also known as Dee, the creative mind behind Dee's Lucky Charms, is passionate about art, design, and spreading joy. With a background in jewellery making and a love for all things whimsical, Dee crafts each piece with care and attention to detail.</p>
     </section>  
 
     <section>
       <h2>Why Choose Us?</h2>
       <ul>
-        <li>Handcrafted quality charms and jewelry</li>
+        <li>Handcrafted quality charms and jewellery</li>
         <li>Unique and meaningful designs</li>
         <li>Perfect for gifting or personal use</li>
         <li>Inspired by luck, love, and positivity</li>
@@ -69,7 +69,7 @@
     <address>
       Contact: <a href="deesluckycharms@gmail.com">deesluckycharms@gmail.com</a><br>
       Sandton, Johannesburg
-      <P>There is currently no physival store. Only online orders.</P>
+      <P>There is currently no physical store. Only online orders.</P>
     </address>
     <p>© 2025 Dee's Lucky Charms</p>
 
