--- a/index_homepage.html
+++ b/index_homepage.html
@@ -44,7 +44,7 @@
             <p>Your one-stop shop for unique, handcrafted charms and jewelry that bring a touch of luck and joy to your life. Explore our collection of beautiful pieces designed to inspire and delight.</p>
         </section>
         <center>
-        <img src="_images/homePage.jpg" alt="Charms" width="1100" height="750">
+        <img src="_images/homePage.jpg" alt="Hero shot" width="1366" height="450">
         </center>
     </main>
   
