did the read me file

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       </a>
     </center>
     <h1>About Dee's Lucky Charms</h1>
-    <p>Handcrafted Charms & Jewelry Inspired by Luck and Joy ✨</p>
+    <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
   </header>
 
   <!-- Navigation, hyperlinks to be able to navigate from one web page to another -->
