--- a/index_homepage.html
+++ b/index_homepage.html
@@ -14,7 +14,7 @@
       <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
     </a>
     <h1>Dee's Lucky Charms</h1>
-    <p>Handcrafted Charms & Jewelry Inspired by Luck and Joy ✨</p>
+    <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
     </center>
   </header>
 
@@ -33,7 +33,7 @@
 
     <!--A brief introduction about the company-->
     <body>
-      Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewelry that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!
+      Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!
     </body>
     
 
@@ -41,7 +41,7 @@
     <main>
         <section>
             <h2>Welcome to Dee's Lucky Charms!</h2>
-            <p>Your one-stop shop for unique, handcrafted charms and jewelry that bring a touch of luck and joy to your life. Explore our collection of beautiful pieces designed to inspire and delight.</p>
+            <p>Your one-stop shop for unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Explore our collection of beautiful pieces designed to inspire and delight.</p>
         </section>
         <center>
         <img src="_images/heroShot.jpg" alt="Hero shot" width="1366" height="450">
