added more content

--- a/contact_us.html
+++ b/contact_us.html
@@ -40,6 +40,22 @@
     </section>
 
     <section>
+      <h2>Frequently asked questions:</h2>
+      <details>
+        <summary>How long does shipping take?</summary>
+        <p>Shipping typically takes 3-5 business days within South Africa. International shipping times may vary.</p>
+      </details>
+      <details>
+        <summary>Do you accept custom orders></summary>
+        <p>Yes. We love making our customers ideas come lo live, Just DM and tell us your inspo. We got you!</p>
+      </details>
+      <details>
+        <summary>What is your return policy?</summary>
+        <p>We accept returns within 30 days of purchase. Items must be in original condition. Please contact us for return instructions.</p>
+      </details>
+    </section>
+
+    <section>
       <h2>Send Us a Message</h2>
       <form action="mailto:hello@deescharms.example" method="post" enctype="text/plain">
         <p>
