attempted to add more content

--- a/enquiry.html
+++ b/enquiry.html
@@ -32,6 +32,7 @@
 
   <!-- Main content -->
   <main>
+    <p>All enquiries are responded to within 24 hours, only from Monday to Friday.</p>
     <section>
       <h2>Enquiry Details</h2>
       <form action="mailto:hello@deescharms.example" method="post" enctype="text/plain">
