--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dee's Lucky Charms Home Page</title>
+    <link rel="stylesheet" href="_css/styles.css">
+</head>
 <body>
 
 
