--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dee's lucky charms About us page</title>
+    <link rel="stylesheet" href="_css/styles.css">
+    
 
 </head>
 <body>
