--- a/products.html
+++ b/products.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dee's lucky charms Product page</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
