--- a/Reviews.html
+++ b/Reviews.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dee's lucky charms Reviews Page</title>
+    <link rel="stylesheet" href="styles.css">
+
+    
 </head>
 
 <header>
