--- a/Reviews.html
+++ b/Reviews.html
@@ -17,9 +17,9 @@
 
     <p>Handmade charm bracelets &amp; lucky gifts</p>
 
-    <nav aria-label="Main navigation">
+    <nav>
       <ul>
-        <li><a href="index_homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact_us.html">Contact</a></li>
