--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <!-- Navigation, hyperlinks to be able to navigate from one web page to another -->
   <nav>
     <ul>
-      <li><a href="index_homepage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="contact_us.html">Contact</a></li>
