--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
   <!-- Header with a logo-->
   <header>
   
+    <div class="logo">
     <a href="index.html">
       <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
     </a>
-    <h1>Dee's Lucky Charms</h1>
+    </div>
+
     <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
 
     <!-- Navigation Bar, contails hyperlinks that aallow navigation from one web page to another -->
     <nav>
         <ul>
-            <li><a href="index_homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="contact_us.html">Contact</a></li>
@@ -34,20 +36,20 @@
     </header>
 
     <!--A brief introduction about the company-->
-    <body>
-      Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!
-    </body>
-    
-
     <!-- Main Content Area -->
     <main>
+
         <section>
             <h2>Welcome to Dee's Lucky Charms!</h2>
             <p>Your one-stop shop for unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Explore our collection of beautiful pieces designed to inspire and delight.</p>
         </section>
-        <center>
-        <img src="_images/heroShot.jpg" alt="Hero shot" width="1366" height="450">
-        </center>
+        <section>
+          <p>Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!</p>
+        </section>
+
+        <div class="hero-container">
+        <img src="_images/heroShot.jpg" alt="Hero shot" class="hero-image">
+        </div>
     </main>
   
 
