Used css to edit the layout of the website. I added the deader and footer section also changed the fonts of the main section added

--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
         <li>Inspired by luck, love, and positivity</li>
       </ul>
     </section>
+    <br class="clearFix">
   </main>
 
   <!-- Footer -->
