--- a/enquiry.html
+++ b/enquiry.html
@@ -9,6 +9,7 @@
 
 <body>
 
+
   <!-- Header -->
   <header>
     
@@ -60,6 +61,7 @@
         </p>
       </form>
     </section>
+    <br class="clearFix">
   </main>
 
   <!-- Footer -->
