--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 
   <!-- Header with a logo-->
-  <header>
+    <header>
   
-    <div class="logo">
-    <a href="index.html">
-      <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
-    </a>
-    </div>
+      <div class="logo">
+        <a href="index.html">
+       <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
+        </a>
+      </div>
 
-    <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
+       <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
 
-    <!-- Navigation Bar, contails hyperlinks that aallow navigation from one web page to another -->
+    <!-- Navigation Bar, contains hyperlinks that aallow navigation from one web page to another -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -46,10 +46,6 @@
         <section>
           <p>Dee's Lucky Charms is a small business dedicated to creating unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Each piece is thoughtfully designed and made with care, ensuring that you receive a product that is not only beautiful but also meaningful. Whether you're looking for a special gift or a personal talisman, Dee's Lucky Charms has something for everyone. Explore our collection and find the perfect charm to inspire and delight you!</p>
         </section>
-
-        <div class="hero-container">
-        <img src="_images/heroShot.jpg" alt="Hero shot" class="hero-image">
-        </div>
     </main>
   
 
