Removed the heroshot on the other web pages

--- a/Reviews.html
+++ b/Reviews.html
@@ -17,20 +17,21 @@
 
     <p>Handmade charm bracelets &amp; lucky gifts</p>
 
-    <nav>
+    <nav id="topLinks">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact_us.html">Contact</a></li>
-        <li><a href="reviews.html">Reviews</a></li>
+        <li class="currentPage">Reviews</li>
         <li><a href="enquiry.html">Enquiry</a></li>
       </ul>
     </nav>
   </header>
 
 <body>
-  <main>
+
+  <main id="reviews">
     <section aria-labelledby="reviews-heading">
       <header>
         <h2 id="reviews-heading">Customer Reviews</h2>
@@ -155,6 +156,19 @@
   </main>
 
   <footer>
+
+       <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+        </nav>
+
+
     <section aria-labelledby="contact-heading">
       <h4 id="contact-heading">Contact</h4>
       <address>
