--- a/about.html
+++ b/about.html
@@ -16,14 +16,13 @@
         <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
       </a>
 
-    <h1>About Dee's Lucky Charms</h1>
     <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
 
   <!-- Navigation, hyperlinks to be able to navigate from one web page to another -->
-  <nav>
+  <nav id="topLinks">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
+      <li class="currentPage">About</li>
       <li><a href="products.html">Products</a></li>
       <li><a href="contact_us.html">Contact</a></li>
       <li><a href="enquiry.html">Enquiry</a></li>
@@ -34,7 +33,7 @@
   
 
   <!-- Main content -->
-  <main>
+  <main id="bookings">
     <section>
       <h2>Our Story</h2>
       <p>Dee's Lucky Charms started with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. Each charm and piece of jewellery is designed with love, meaning, and a touch of magic.</p>
@@ -46,7 +45,7 @@
     </section>
 
     <section>
-      <h2>Our Vission</h2>
+      <h2>Our Vision</h2>
         <p>To become South Africa’s leading brand for spiritual and symbolic jewellery by offering affordable, meaningful, and stylish accessories.</p>
    
       </section>
@@ -70,6 +69,19 @@
 
   <!-- Footer -->
   <footer>
+
+    <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+        </nav>
+
+
     <address>
       Contact: <a href="deesluckycharms@gmail.com">deesluckycharms@gmail.com</a><br>
       Sandton, Johannesburg
