--- a/contact_us.html
+++ b/contact_us.html
@@ -15,24 +15,27 @@
       <a href="index.html">
         <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
       </a>
-    <h1>Contact Dee's Lucky Charms</h1>
+
     <p>We’d love to hear from you! ✨</p>
 
   <!-- Navigation -->
-  <nav>
+  <nav id="topLinks">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
-      <li><a href="contact_us.html">Contact</a></li>
+      <li class="currentPage">Contact</li>
       <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="Reviews.html">Reviews</a></li>
       
     </ul>
   </nav>
   </header>
 
+
   <!-- Main content -->
-  <main>
+  <main id="contact">
+
     <section>
       <h2>Contact Information</h2>
       <address>
@@ -84,6 +87,19 @@
 
   <!-- Footer -->
   <footer>
+
+     <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+        </nav>
+
+
     <p>© 2025 Dee's Lucky Charms</p>
   </footer>
 
