--- a/enquiry.html
+++ b/enquiry.html
@@ -16,17 +16,16 @@
       <a href="index.html">
         <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
       </a>
-    <h1>Enquiry Form</h1>
     <p>Have a question about our charms or products? Send us an enquiry! ✨</p>
 
   <!-- Navigation -->
-  <nav>
+  <nav id="topLinks">
     <ul>
       <li><a href="index_homepage.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="contact_us.html">Contact</a></li>
-      <li><a href="enquiry.html">Enquiry</a></li>
+      <li class="currentPage">Enquiry</li>
       <li><a href="Reviews.html">Reviews</a> </li>
     </ul>
   </nav>
@@ -34,7 +33,7 @@
   
 
   <!-- Main content -->
-  <main>
+  <main id="enquiry">
     <p>All enquiries are responded to within 24 hours, only from Monday to Friday.</p>
     <section>
       <h2>Enquiry Details</h2>
@@ -66,6 +65,19 @@
 
   <!-- Footer -->
   <footer>
+
+     <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+        </nav>
+
+
     <address>
       Contact: <a href="dee@gmail.com">deesluckycharms@gmail.com</a><br>
       Sandton, Johannesburg
