--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
        <p>Handcrafted Charms & jewellery Inspired by Luck and Joy ✨</p>
 
     <!-- Navigation Bar, contains hyperlinks that aallow navigation from one web page to another -->
-    <nav>
+    <nav id="topLinks">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class="currentPage">Home</li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="contact_us.html">Contact</a></li>
             <li><a href="enquiry.html">Enquiry</a></li>
             <li><a href="Reviews.html">Reviews</a> </li>
         </ul>
+        </nav>
 
     </nav>
     </header>
@@ -51,6 +52,17 @@
 
   <!-- Footer Section -->
   <footer>
+    <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+
+
     <p>&copy; 2024 Dee's Lucky Charms. All rights reserved.</p>
     <p>Contact us: 0658 877 789 </p>
     <p>Email: <a href="mailto:dee@gmail.com">deesluckycharms@gmail.com</a></p>
