--- a/products.html
+++ b/products.html
@@ -15,16 +15,14 @@
       <a href="index.html">
         <img src="_images/Logo.png" alt="Dee's Lucky Charms Logo" width="200" height="200">
       </a>
-
-    <h1>Our Products</h1>
     <p>Discover our handcrafted charms and jewelry collections ✨</p>
 
   <!-- Navigation -->
-  <nav>
+  <nav id="topLinks">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="products.html">Products</a></li>
+      <li class="currentPage">Products</li>
       <li><a href="contact_us.html">Contact</a></li>
       <li><a href="enquiry.html">Enquiry</a></li>
       <li><a href="Reviews.html">Reviews</a> </li>
@@ -34,7 +32,7 @@
   
 
   <!-- Main content -->
-  <main>
+  <main id="products">
     <section>
       <h2>Spiritual Bracelets</h2>
       <article>
@@ -102,6 +100,18 @@
 
   <!-- Footer -->
   <footer>
+
+     <nav id="bottomLinks">
+        <ul>
+            <li class="currentPage">Home</li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
+            <li><a href="Reviews.html">Reviews</a> </li>
+        </ul>
+        </nav>
+
     <address>
       Contact: <a href="dee@gmail.com">deesluckycharms@gmail.com</a><br>
       Sandton, Johannesburg
