debugged the products page

--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
       <article>
         <h3>White sabrina</h3>
         <figure>
-          <img src="_images/Women's Jewelry.jpg" alt="White" width="400" height="400">
+          <img src="_images/sabrina.jpg" alt="White" width="400" height="400">
           <figcaption>Custom white piece named by my client</figcaption>
         </figure>
         <p>Price: R110</p>
