Changed the layout of the reviews page using css

--- a/products.html
+++ b/products.html
@@ -52,8 +52,46 @@
         </figure>
         <p>Price: R50</p>
       </article>
+
+      <article>
+      <h3>Tiger's eye bracelet</h3>
+      <figure>
+        <img src="_images/tigersEye.png" alt="Tigers eye" width="400" height="400">
+        <figcaption>This red Tiger's eye channels courage, focus and grounded energy.</figcaption>
+      </figure>
+      <p>Price: R55</p>
+    </article>
+
+    <article>
+      <h3>Chakra bracelet</h3>
+      <figure>
+        <img src="_images/chakra.png" alt="Chakra" width="400" height="400">
+        <figcaption>The stylish Chakra bracelet balances energy centers using 7 coloured beads, each linked to a specific chakra.</figcaption>
+      </figure>
+      <p>Price: R100</p>
+    </article>
+
+    <article>
+      <h3>Citrine bracelet</h3>
+      <figure>
+        <img src="_images/citrine.png" alt="Citrine" width="400" height="400">
+        <figcaption>This golden-yellow gemstone attracts positivity, abundence and confidence.</figcaption>
+      </figure>
+      <p>Price: R50</p>
+    </article>
+
+    <article>
+      <h3>Hematite bracelet</h3>
+      <figure>
+        <img src="_images/Hematite.png" alt="Hematite" width="400" height="400">
+        <figcaption>It aids grounding, balance and mental clarity.</figcaption>
+      </figure>
+      <p>Price: R45</p>
+    </article>
+
     </section>
 
+    
     <section>
       <h2>Fashion bracelets</h2>
       <article>
