Debugged the index page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   
 
   <!-- Main content -->
-  <main id="bookings">
+  <main id="about">
     <section>
       <h2>Our Story</h2>
       <p>Dee's Lucky Charms started with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. Each charm and piece of jewellery is designed with love, meaning, and a touch of magic.</p>
