--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     <!-- Main Content Area -->
     <main>
 
+      <section class="hero">
+        <div class="hero-text">
+          <a href="products.html" class="cta-btn">Shop Now</a>
+        </div>
+      </section>
+
         <section>
             <h2>Welcome to Dee's Lucky Charms!</h2>
             <p>Your one-stop shop for unique, handcrafted charms and jewellery that bring a touch of luck and joy to your life. Explore our collection of beautiful pieces designed to inspire and delight.</p>
