Updated the readme file

--- a/contact_us.html
+++ b/contact_us.html
@@ -41,7 +41,7 @@
       <address>
         Email: <a href="mailto:hello@deescharms.example">deesluckycharms@gmail.com</a><br>
         Phone: +27 658 877 789<br>
-        Location: Sandton, Johannesburg
+        Location: We currently do not have a physical store.
       </address>
     </section>
 
