--- a/index.html
+++ b/index.html
@@ -187,8 +187,11 @@
         charmContainer.innerHTML = charmHTML;
     }
 
-    
-    window.addEventListener('load', displayRandomCharm);
+    // Display immediately on load
+    displayRandomCharm();
+
+    // Set an interval to switch the suggestion every 10 seconds (10000ms)
+    setInterval(displayRandomCharm, 10000); 
 
   </script>
 </body>
