added some interactive elemts and dynamic elements to the about, index and products page

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 
     // Set an interval to switch the suggestion every 10 seconds (10000ms)
     setInterval(displayRandomCharm, 10000); 
+    
+    window.addEventListener('load', displayRandomCharm);
 
   </script>
 </body>
