added SEO Tags to all the web pages

--- a/Reviews.html
+++ b/Reviews.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dee's lucky charms Reviews Page</title>
+    <title>Customer Reviews | Dee's Lucky Charms Testimonials</title>
+    <meta name="description" content="Read authentic customer reviews and testimonials for Dee's Lucky Charms. Share your experience with our handcrafted lucky jewelry and spiritual bracelets.">
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <header>
