--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dee's Lucky Charms About Us Page</title>
+  <title>About Dee's Lucky Charms | Handcrafted Lucky Jewelry & Spiritual Bracelets</title>
+  <meta name="description" content="Discover the story behind Dee's Lucky Charms - Johannesburg-based creator of meaningful, handcrafted lucky jewelry and spiritual bracelets. Ethically sourced with positive intention.">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -28,9 +29,11 @@
   </header>
 
   <main id="about">
+    <h1>About Dee's Lucky Charms</h1>
+    
     <section class="section-one"> 
       <h2>Our Story</h2>
-      <p>Dee's Lucky Charms started with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. Each charm and piece of jewellery is designed with love, meaning, and a touch of magic.</p>
+      <p>Dee's Lucky Charms started in Johannesburg with a simple idea: to create small tokens of joy and good luck that everyone can enjoy. As a South African jewelry artisan, each charm and piece of jewellery is designed with love, meaning, and a touch of magic inspired by diverse cultural symbols.</p>
     </section>
 
     <section class="section-two"> 
