--- a/contact_us.html
+++ b/contact_us.html
@@ -2,10 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dee's lucky charms Contact page</title>
+    <title>Contact Dee's Lucky Charms | Custom Jewelry Inquiries</title>
+    <meta name="description" content="Get in touch with Dee's Lucky Charms for custom jewelry, spiritual bracelets, and lucky charm inquiries. Based in Johannesburg with nationwide delivery.">
     <link rel="stylesheet" href="styles.css">
-    
-
 </head>
 
 <body>
