--- a/enquiry.html
+++ b/enquiry.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dee's lucky charms Enquaries page</title>
+    <title>Enquire About Custom Charms | Dee's Lucky Charms</title>
+    <meta name="description" content="Submit enquiries for custom jewelry, volunteer opportunities or partnerships with Dee's Lucky Charms. Response within 24 hours.">
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 
 <body>
