--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
-        // Optionally close with ESC key
-        document.addEventListener('keydown', function(e) {
-            if (e.key === "Escape" && lightbox.style.display === 'block') {
-                closeLightbox();
-            }
-        });
- <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dee's Lucky Charms Home Page</title>
+    <title>Dee's Lucky Charms | Handcrafted Lucky Jewelry & Spiritual Bracelets</title>
+    <meta name="description" content="Discover unique handcrafted charms and spiritual bracelets from Dee's Lucky Charms. Each piece brings luck, joy and positive energy. Ethically made in Johannesburg.">
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
 
@@ -242,4 +235,4 @@
 
   </script>
 </body>
-</html>
+</html
