--- a/enquiry.html
+++ b/enquiry.html
@@ -19,7 +19,7 @@
 
   <nav id="topLinks">
     <ul>
-      <li><a href="index_homepage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="contact_us.html">Contact</a></li>
